@startuml

title __DECOR_R's Class Diagram__\n

  namespace Decor_R {
    class Decor_R.Activities_R {
        + Activities_R()
        + draw()
        - drawWithPresent()
    }
  }
  

  namespace Decor_R {
    interface Decor_R.ChristmasTree {
        {abstract} + draw()
    }
  }
  

  namespace Decor_R {
    class Decor_R.ChristmasTreeImpl {
        + draw()
    }
  }
  

  namespace Decor_R {
    class Decor_R.Event_R {
        + Event_R()
        + draw()
        - drawEvent()
    }
  }
  

  namespace Decor_R {
    class Decor_R.Gateways_R {
        + Gateways_R()
        + draw()
        - drawGateWays()
    }
  }
  

  namespace Decor_R {
    abstract class Decor_R.TreeDecorator {
        + TreeDecorator()
        + draw()
    }
  }
  

  namespace Decor_R {
    class Decor_R.Tree_R {
        + Tree_R()
        + draw()
        - drawTree()
    }
  }
  

  Decor_R.Activities_R -up-|> Decor_R.TreeDecorator
  Decor_R.ChristmasTreeImpl .up.|> Decor_R.ChristmasTree
  Decor_R.Event_R -up-|> Decor_R.TreeDecorator
  Decor_R.Gateways_R -up-|> Decor_R.TreeDecorator
  Decor_R.TreeDecorator .up.|> Decor_R.ChristmasTree
  Decor_R.TreeDecorator o-- Decor_R.ChristmasTree : tree
  Decor_R.Tree_R -up-|> Decor_R.TreeDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
